--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div class="logo-section">
       <!-- Logo + IG kiri -->
       <div class="logo-box">
-        <img src="LOGO/LOGO INFOR UKWMS.png" alt="Logo Informatika UKWMS">
+        <img src="LOGO INFOR UKWMS.png" alt="Logo Informatika UKWMS">
         <div class="social">
           <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
           smak_santo_stanislaus
@@ -135,7 +135,7 @@
 
       <!-- Logo + IG kanan -->
       <div class="logo-box">
-        <img src="LOGO/smaksantostanislaus.png" alt="Logo SMAK St. Stanislaus">
+        <img src="smaksantostanislaus.png" alt="Logo SMAK St. Stanislaus">
         <div class="social">
           <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
           informatika.ukwms
